image service update

--- a/app/src/main/res/layout/activity_user_detail.xml
+++ b/app/src/main/res/layout/activity_user_detail.xml
@@ -60,8 +60,7 @@
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/heavy_data"
                             android:textSize="24sp"
-                            android:textStyle="bold"
-                            />
+                            android:textStyle="bold" />
 
                         <TextView
                             android:id="@+id/user_email"
